fixed css errr on mobile image for hero

--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -50,7 +50,7 @@
 		}
 
 		svg {
-			transition: ease-in-out .5s;
+			transition: ease-in-out 0.5s;
 			scale: 1.1;
 		}
 	}
@@ -63,11 +63,11 @@
 		display: none;
 	}
 }
-.hero-img-mobile {
-	display: none !important;
-}
 
 @media screen and (min-width: 576px) {
+	.hero-img-mobile {
+		display: none !important;
+	}
 	.hero-text-mobile {
 		display: none;
 	}
